# geoconv-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-build.yml  cargo-clippy.yml  cargo-fmt.yml  cargo-test.yml
examples/: converto.rs  goes16.rs  haversine.rs  latlon.rs
src/: lib.rs  maidenhead.rs  wgs.rs  wgs72.rs  wgs84.rs
