[package]
name = "geoconv"
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["Paul Tagliamonte <paultag@gmail.com>"]
repository = "https://github.com/paultag/geoconv-rs"
description = "convert between different coordinate systems"

[features]
default = ["std"]
std = []

[dependencies]
libm = "0.2"
