[package]
name = "geoconv"
version = "0.7.1"
edition = "2024"
license = "MIT"
authors = ["Paul Tagliamonte <paultag@gmail.com>"]
repository = "https://github.com/paultag/geoconv-rs"
description = "convert between different coordinate systems"

[features]
default = ["std"]
libm = ["dep:libm"]
std = []

[dependencies]
libm = { version = "0.2", optional = true }
